<resources>
    <string name="app_name">Gaurav SBNRI</string>

    <string name="admin">Admin</string>
    <string name="pull">Pull</string>
    <string name="push">Push</string>
    <string name="account">account</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="github_username">Github Username</string>
    <string name="developer_note">Made with ❤ by Gaurav Bordoloi</string>
    <string name="night_mode">Night Mode</string>
</resources>