<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text"
            tools:text="Repo Title" />

        <TextView
            android:id="@+id/repoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            tools:text="23 May 2020" />

        <TextView
            android:id="@+id/repoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text"
            tools:text="Repo Description" />

        <HorizontalScrollView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repoIssues"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_issue"
                    android:background="@drawable/bg_red"
                    android:fontFamily="@font/regular"
                    android:drawablePadding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    tools:text="24 open issues" />

                <TextView
                    android:id="@+id/repoLicense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_green"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawablePadding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_license"
                    android:fontFamily="@font/regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    tools:text="MIT License" />

                <ImageView
                    android:id="@+id/buttonOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/actionBarItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_browser"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/permissionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#9e9e9e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:weightSum="3">

                <CheckBox
                    android:id="@+id/permissionAdmin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/regular"
                    android:text="@string/admin"
                    android:textColor="@color/text" />

                <CheckBox
                    android:id="@+id/permissionPush"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/regular"
                    android:text="@string/push"
                    android:textColor="@color/text" />

                <CheckBox
                    android:id="@+id/permissionPull"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/regular"
                    android:text="@string/pull"
                    android:textColor="@color/text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>